--- a/tryton.cfg
+++ b/tryton.cfg
@@ -1,5 +1,5 @@
 [tryton]
-version = 1.2.0a9
+version = 2.0.0b6
 description = Contains triage functionality and a patient call queue
 depends:
     health_encounter
