normalise versioning and fix dependency

--- a/tryton.cfg
+++ b/tryton.cfg
@@ -1,5 +1,5 @@
 [tryton]
-version = 2.0.0b6
+version = 0.1.6
 description = Contains triage functionality and a patient call queue
 depends:
     health_encounter
