--- a/tryton.cfg
+++ b/tryton.cfg
@@ -1,5 +1,5 @@
 [tryton]
-version = 0.4.2c1
+version = 0.4.4
 description = Contains triage functionality and a patient call queue
 depends:
     health_encounter
