Increased the version number of the module

--- a/tryton.cfg
+++ b/tryton.cfg
@@ -1,5 +1,5 @@
 [tryton]
-version = 0.4.6
+version = 0.4.7
 description = Contains triage functionality and a patient call queue
 depends:
     health_encounter
@@ -8,3 +8,4 @@ depends:
 xml:
     views.xml
     wizards.xml
+    reports.xml
